--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -3,7 +3,7 @@
     &:link,
     &:visited {
         text-decoration: none;
-        font-size: 1.6rem;
+        font-size: $default-font-size;
         text-transform: uppercase;
         display: inline-block;
         padding: 2rem 3rem;
@@ -31,6 +31,14 @@
         }
     }
 
+    &--green {
+        background-color: $color-medium-green;
+        color: $color-white;
+        &::after {
+            background-color: $color-medium-green;
+        }
+    }
+
     &::after {
         content: "";
         display: inline-block;
@@ -53,5 +61,29 @@
     &--animated {
         animation: btnBottom 0.5s ease-out .75s;
         animation-fill-mode: backwards;
+    } 
+}
+
+.btn-text {
+    &:link,
+    &:visited{
+        font-size: $default-font-size;
+        color: $color-medium-green;
+        text-decoration: none;
+        border-bottom: 1px solid $color-medium-green;
+        padding: 3px;
+        transition: all .2s;
+    }
+
+    &:hover {
+       background-color: $color-medium-green;
+       color: $color-white;
+       box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
+       transform: translateY(-2px);
+    }
+
+    &:active {
+        transform: translateY(-0.1rem);
+        box-shadow: 0 .5rem 1rem rgba($color-black,0.2);
     } 
 }
