--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -71,7 +71,7 @@
         color: $color-medium-green;
         text-decoration: none;
         border-bottom: 1px solid $color-medium-green;
-        padding: 3px;
+        padding: 1rem;
         transition: all .2s;
     }
 
