--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -14,6 +14,7 @@ $color-white: #fff;
 $color-light-white: #eee;
 
 $color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #999;
 $color-grey: #777;
 
 $color-black: #000;
