--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -15,6 +15,7 @@ $color-light-white: #eee;
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #999;
+$color-grey-dark-1: #333;;
 $color-grey: #777;
 
 $color-black: #000;
