--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,7 +3,6 @@ body {
     font-weight: 400;
     line-height: 1.7;
     color: $color-grey;
-    padding: 3rem;
 }
 
 .heading-primary{
@@ -11,13 +10,18 @@ body {
     text-transform: uppercase;
     backface-visibility: hidden;  /*it is used to hide the shakiness of the animation*/ 
     margin: 3.5rem; 
-
+    
     &--main{
         display: block;
         font-size: 6rem;
         font-weight: 400;
         letter-spacing: 3.5rem;
         animation: moveInLeft 2s ;
+
+        @include forSize(phone) {
+           letter-spacing: 1rem;
+           font-size: 5rem;
+        }
     }
     
     &--sub {
@@ -26,6 +30,11 @@ body {
         font-weight: 700;  
         letter-spacing: 1.75rem;
         animation: moveInRight 2s;
+
+        @include forSize(phone) {
+            letter-spacing: .5rem;
+            font-size: 5rem;
+         }
     }
 }
 
@@ -40,6 +49,14 @@ body {
     color: transparent;
     letter-spacing: .2rem;
     transition: all .2s;
+
+    @include forSize(tab-port) {
+        font-size: 3rem;
+    }
+
+    @include forSize(phone) {
+        font-size: 2.5rem;
+    }
 
     &:hover {
         transform: skewY(2deg) skewX(15deg) scale(1.1);
