--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,10 +1,28 @@
 .u-center-text { text-align: center !important;}
 
-.u-margin-bottom-big {margin-bottom: 8rem !important;} 
+.u-margin-bottom-big {
+    margin-bottom: 8rem !important;
 
-.u-margin-bottom-medium {margin-bottom: 6rem !important ;}
+    @include forSize(tab-port) {
+        margin-bottom: 5rem;
+    }
+ } 
 
-.u-margin-bottom-small {margin-bottom: 1.5rem !important;}
+.u-margin-bottom-medium {
+    margin-bottom: 6rem !important ;
+
+    @include forSize(tab-port) {
+        margin-bottom: 3rem !important ;
+    }
+    
+ }
+
+.u-margin-bottom-small {
+    margin-bottom: 1.5rem !important;
+    @include forSize(tab-port) {
+        margin-bottom: 1rem;
+    }  
+ }
 
 .u-margin-top-big { margin-top: 8rem !important;}
 .u-margin-top-huge { margin-top: 10rem !important;}
