--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -17,7 +17,16 @@
        box-shadow: 0 1rem 3rem rgba($color-black , .1);
        text-align: center;
        cursor: pointer;
+       
+       @include forSize(tab-port){
+           top: 4rem;
+           right: 4rem;
+       }
 
+       @include forSize(phone){
+        top: 3rem;
+        right: 3rem;
+       }
     }
 
     &__background {
@@ -30,6 +39,16 @@
        background-image: radial-gradient($color-light-green , $color-dark-green);
        z-index: 1000;
        transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
+      
+       @include forSize(tab-port){
+        top: 4.5rem;
+        right: 4.5rem;
+      }
+
+        @include forSize(phone){
+            top: 3.5rem;
+            right: 3.5rem;
+        }
        //transform: scale(80);
     }
 
