--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,11 @@
     background-color: $color-grey-light-1;
     padding: 25rem 0;
     margin-top: -20vh;
+
+    @include forSize(tab-port) {
+      padding: 20rem 0;
+    }
+
 }
 
 .section-feature {
@@ -19,23 +24,52 @@
     & > * {
         transform: skewY(7deg);
     }
+
+    @include forSize(tab-port) {
+        padding: 15rem 0;
+      }
 }
 
 .section-tour {
     background-color: $color-grey-light-1;
     padding: 25rem 0 20rem 0;
     margin-top: -10rem;
+    
+    @include forSize(tab-port) {
+        padding: 20rem 0 15rem 0;
+      }
 }
 
 .section-stories {
  padding: 15rem 0;
  position: relative;
+
+ @include forSize(tab-port) {
+    padding: 10rem;
+  }
+
+  @include forSize(phone) {
+      padding: 2rem;
+  }
+  
 }
 
 .section-book {
    padding: 15rem 0;
    background-image: linear-gradient(to right bottom, $color-light-green , $color-dark-green);
+   
+   @include forSize(tab-land) {
+       padding: 10rem 3rem;
+   }
 
+   @include forSize(tab-port) {
+       .row {
+           max-width: none;
+       }
+
+       padding: 6rem 0;
+
+   }
 }
 
 .book {
@@ -45,13 +79,50 @@
                      transparent 50%),
                     url(../img/nat-10.jpg);
 
-    background-size: 100%;
-    height: 50rem;
+    background-size: cover;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black , .2);
 
-    &__form {
+
+    @include forSize(tab-land) {
+
+        background-image: linear-gradient(105deg , 
+                    rgba($color-white, .9) 0% ,
+                    rgba($color-white, .9) 65% ,
+                     transparent 65%),
+                    url(../img/nat-10.jpg);
+
+        background-size: cover;
+    }
+
+    @include forSize(phone) {
+        background-image: linear-gradient( 
+                    rgba($color-white, .9) 0% ,
+                    rgba($color-white, .9) 100%),
+                    url(../img/nat-10.jpg);
+
+        background-size: cover;
+    }
+
+   
+    
+      
+      &__form {
         width: 50%;
         padding: 6rem;
+
+        @include forSize(tab-land) {
+            width: 65%;
+        }
+
+        @include forSize(tab-port) {
+            width: 75%;
+        }
+
+        @include forSize(phone) {
+            width: 100%;
+            text-align: center;
+        }
+
     }
 }
