--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,12 +1,39 @@
 // HEADER COMPONENT
 
 .header {
-    height: 95vh;
-    background-image: linear-gradient(to right bottom ,rgba($color-light-green, 0.8) , rgba($color-medium-green, 0.8)) ,url(../img/hero.jpg);
+    height: 85vh;
+    background-image: linear-gradient(to right bottom ,
+                      rgba($color-light-green, 0.8) , 
+                      rgba($color-medium-green, 0.8)) ,
+                      url(../img/hero-small.jpg);
     background-size: cover;
     background-position: top;
     position: relative;
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+    
+
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+        height: 95vh;         
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+        
+    }
+
+    @supports (backdrop-filter: blur(10px)) or (-webkit-backdrop-filter: blur(10px)) {
+        -webkit-backdrop-filter: blur(10px);
+        backdrop-filter: blur(10px);
+        background-color: rgba($color-black, .3);
+    }
+
+    @media (min-resolution: 192dpi) and (min-width: 37.5em),
+           (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+           (min-width: 125em)
+          {
+                    background-image: linear-gradient(to right bottom ,
+                                rgba($color-light-green, 0.8) , 
+                                rgba($color-medium-green, 0.8)) ,
+                                url(../img/hero.jpg);
+          }
+
 
     @include forSize(phone) {
         clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
