--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -176,13 +176,15 @@
 
 
      
-     @include forSize(tab-port) {
+    //  @include forSize(tab-port) {
 
-        height: auto;
-        box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
-        background-color: $color-white;
-        border-radius: 3px;
-        overflow: hidden;
+        @media only screen and (max-width: 56.25em),
+               only screen and (hover: none) { 
+            height: auto;
+            box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+            background-color: $color-white;
+            border-radius: 3px;
+            overflow: hidden;
 
         &__side {
 
